app/javascript/flavours/polyam/styles/components/compose_form.scss
/* ... */
.compose-form__upload__actions {
  background: linear-gradient(
    180deg,
    rgba($base-shadow-color, 0.8) 0,
    rgba($base-shadow-color, 0.35) 80%,
    transparent
  );
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}

.upload-progress {
  display: flex;
  padding: 10px;
  color: $darker-text-color;
  overflow: hidden;

  .icon {
    width: 21px;
    height: 21px;
  }

  span {
    display: block;
    font-size: 12px;
    font-weight: 500;
    text-transform: uppercase;
  }
}

.upload-progress__message {
  flex: 1 1 auto;
}

.upload-progress__backdrop {
  position: relative;
  margin-top: 5px;
  border-radius: 6px;
  width: 100%;
  height: 6px;
  background: darken($simple-background-color, 8%);
}

.upload-progress__tracker {
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 6px;
  border-radius: 6px;
  background: $ui-highlight-color;
}

.compose-form__modifiers {
  color: $inverted-text-color;
  font-family: inherit;
  font-size: 14px;
  background: $simple-background-color;
}

.compose-form__buttons-wrapper {
  padding: 10px;
  background: darken($simple-background-color, 8%);
  border-radius: 0 0 4px 4px;
  height: 27px;
  display: flex;
  justify-content: space-between;
  flex: 0 0 auto;
}

.compose-form__buttons {
  display: flex;
  flex: 0 0 auto;
  gap: 2px;

  .icon-button {
    height: 100%;
  }

  & .icon-button,
  & .text-icon-button {
    display: inline-block;
    box-sizing: content-box;
    padding: 0 3px;
    height: 27px;
    line-height: 27px;
    vertical-align: bottom;
  }

  & > hr {
    display: inline-block;
    margin: 0 3px;
    border-width: 0 0 0 1px;
    border-style: none none none solid;
    border-color: transparent transparent transparent
      darken($simple-background-color, 24%);
    padding: 0;
    width: 0;
    height: 27px;
    background: transparent;
  }
}

.character-counter__wrapper {
  align-self: center;
  margin-inline-end: 4px;
}

.privacy-dropdown__dropdown {
  border-radius: 4px;
  box-shadow: var(--dropdown-shadow);
  background: $simple-background-color;
  overflow: hidden;
  transform-origin: 50% 0;
}

.privacy-dropdown__option {
  display: flex;
  align-items: center;
  padding: 10px;
  color: $inverted-text-color;
  cursor: pointer;

  .privacy-dropdown__option__content {
    flex: 1 1 auto;
    color: $lighter-text-color;

    &:not(:first-child) {
      margin-inline-start: 10px;
    }

    strong {
      display: block;
      color: $inverted-text-color;
      font-weight: 500;
    }
  }

  &:hover,
  &.active {
    background: $ui-highlight-color;
    color: $primary-text-color;

    .privacy-dropdown__option__content {
      color: $primary-text-color;

      strong {
        color: $primary-text-color;
      }
    }
  }

  &.active:hover {
    background: lighten($ui-highlight-color, 4%);
  }
}

.compose-form__publish {
  display: flex;
  justify-content: flex-end;
  min-width: 0;
  flex: 0 0 auto;
  column-gap: 5px;

  .compose-form__publish-button-wrapper {
    padding-top: 10px;

    button {
      padding: 7px 10px;
      text-align: center;
    }

    & > .side_arm {
      width: 36px;
      height: 36px;
    }
  }
}

.language-dropdown {
  &__dropdown {
    background: $simple-background-color;
    box-shadow: var(--dropdown-shadow);
    border-radius: 4px;
    overflow: hidden;
    z-index: 2;

    &.top {
      transform-origin: 50% 100%;
    }

    &.bottom {
      transform-origin: 50% 0;
    }

    .emoji-mart-search {
      padding-inline-end: 10px;
    }

    .emoji-mart-search-icon {
      inset-inline-end: 10px + 5px;
    }

    .emoji-mart-scroll {
      padding: 0 10px 10px;
    }

    &__results {
      &__item {
        cursor: pointer;
        color: $inverted-text-color;
        font-weight: 500;
        padding: 10px;
        border-radius: 4px;
        display: flex;
        gap: 6px;
        align-items: center;

        &:focus,
        &:active,
        &:hover {
          background: $ui-secondary-color;
        }

        &__common-name {
          color: $darker-text-color;
        }

        &.active {
          background: $ui-highlight-color;
          color: $primary-text-color;
          outline: 0;

          .language-dropdown__dropdown__results__item__common-name {
            color: $secondary-text-color;
          }

          &:hover {
            background: lighten($ui-highlight-color, 4%);
          }
        }
      }
    }
  }
}

.compose-form__highlightable {
  display: flex;
  flex-direction: column;
  flex: 0 1 auto;
  border-radius: 4px;
  transition: box-shadow 300ms linear;
  min-height: 0;
  position: relative;

  &.active {
    transition: none;
    box-shadow: 0 0 0 6px rgba(lighten($highlight-text-color, 8%), 0.7);
  }
}

